# tonic-web-wasm-client

test-suite/client-tonic/: Cargo.toml
test-suite/client-tonic/src/: lib.rs
test-suite/client-tonic/tests/: web.rs
test-suite/server/src/: main.rs
