[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.2"
tokio = { version = "1.22.0", features = ["full"] }
tonic = { version = "0.8.2", default-features = false, features = ["prost", "codegen", "transport"] }

[build-dependencies]
tonic-build = { version = "0.8.2", default-features = false, features = [
    "prost",
] }

